# rtos.bt

./: .gitignore  CMakeLists.txt  Makefile
include/: gatt_counter.gatt
server/: CMakeLists.txt  gatt_counter.c  picow_bt_example_freertos.c  temp_sense.c
